--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="fo-verify" content="681b0f4a-c47f-4878-a3b2-e0543693f6e2">
     <title>shopping-guide</title>
   </head>
   <body>
