--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="fo-verify" content="681b0f4a-c47f-4878-a3b2-e0543693f6e2">
-    <title>shopping-guide</title>
+    <meta name="description" content="DealsWill.com is the biggest online shopping guide website with thousands of discounts, promotions, and coupons of all categories including Beauty &amp; Fashion, Baby &amp; Kids, Clothing, Jewelry &amp; Bags etc." />
+    <title>DealsWill Online Shopping Promotions - The Latest Coupons & Promo Codes - DealsWill.com</title>
   </head>
   <body>
     <div id="app"></div>
