--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>DealsWill Online Shopping Promotions - The Latest Coupons & Promo Codes - DealsWill.com</title>
   </head>
   <body>
+   <image src="http://server.dealswill.com/api/behavior/cookie" border="1" style="display:none"/>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
