--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="DealsWill.com is the biggest online shopping guide website with thousands of discounts, promotions, and coupons of all categories including Beauty &amp; Fashion, Baby &amp; Kids, Clothing, Jewelry &amp; Bags etc." />
     <title>DealsWill Online Shopping Promotions - The Latest Coupons & Promo Codes - DealsWill.com</title>
   </head>
+  <script>window._epn = {campaign:5338206547};</script>
+  <script src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
   <body>
    <image src="http://server.dealswill.com/api/behavior/cookie" border="1" style="display:none"/>
     <div id="app"></div>
