--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>DealsWill Online Shopping Promotions - The Latest Coupons & Promo Codes - DealsWill.com</title>
     <script>window._epn = {campaign:5338206547};</script>
     <script src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104305322-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-104305322-4');
+    </script>
   </head>
   <body>
    <image src="http://server.dealswill.com/api/behavior/cookie" border="1" style="display:none"/>
